@@ -12,6 +12,7 @@ REST API
 --------
 
 * API version upgraded to 12
+* "/system" reports the value of the "CheckRevisions" global option
 * "/.../{id}/metadata/{name}" and "/.../{id}/attachments/{name}/..." URIs handle the
   HTTP headers "If-Match", "If-None-Match" and "ETag" to cope with revisions
 
